wire in printing map artifacts